--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vkontakte/vk-bridge": "^2.7.2",
+    "@vkontakte/vk-connect": "^1.9.1",
     "@vkontakte/vkui": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
