--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/providers": "^10.2.1",
     "@vkontakte/vk-bridge": "^2.7.2",
     "@vkontakte/vk-connect": "^1.9.1",
     "@vkontakte/vkui": "^5.2.0",
+    "ethers": "^5.7.2",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +27,7 @@
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-checker": "^0.5.6"
   }
 }
