--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vite-plugin-checker": "^0.5.6"
+    "vite-plugin-checker": "^0.5.6",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
